--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="heading">
                 <h1>Hi, I'm Mohamed</h1>
                 <h3 style="color: cornsilk;">Web Developer</h3>
-                <a href="docs/CV_BAKADIR_Mohamed.pdf" class="button1">Download My CV</a>
+                <a href="docs/BAKADIR_Mohamed.pdf" class="button1">Download My CV</a>
         </div>
     </section>
 
