--- a/babaali/index.html
+++ b/babaali/index.html
@@ -262,7 +262,7 @@
                                 </div>
                             </div>
                             <div class="popular-caption">
-                                <h3><a href="index.html">Thermo Ball Etip Gloves</a></h3>
+                                <h3><a href="index.html">Smart Helmets</a></h3>
                                 <span>$ 45,99</span>
                             </div>
                         </div>
