update text code

--- a/babaali/index.html
+++ b/babaali/index.html
@@ -120,7 +120,7 @@
                             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-8">
                                 <div class="hero__caption">
                                     <h1 data-animation="fadeInLeft" data-delay=".4s" data-duration="2000ms">Select Your New Perfect Style</h1>
-                                    <p data-animation="fadeInLeft" data-delay=".7s" data-duration="2000ms">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat is aute irure.</p>
+                                    <p data-animation="fadeInLeft" data-delay=".7s" data-duration="2000ms">Bike Helmets, Ski Helmets & Skateboard Helmets WORLD LEADING SMART HELMETS .</p>
                                     <!-- Hero-btn -->
                                     <div class="hero__btn" data-animation="fadeInLeft" data-delay=".8s" data-duration="2000ms">
                                         <a href="industries.html" class="btn hero-btn">Shop Now</a>
@@ -406,7 +406,8 @@
                             <div class="single-method mb-40">
                                 <i class="ti-package"></i>
                                 <h6>Free Shipping Method</h6>
-                                <p>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</p>
+                                <p>You Can Choose your methode for the shipping for the people live in USA 
+                                The Shipping is free.</p>
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-4 col-md-6">
