add text to all page

--- a/babaali/index.html
+++ b/babaali/index.html
@@ -406,7 +406,7 @@
                             <div class="single-method mb-40">
                                 <i class="ti-package"></i>
                                 <h6>Free Shipping Method</h6>
-                                <p>You Can Choose your methode for the shipping for the people live in USA 
+                                <p>You Can Choose your methode for the shipping , for the people live in USA 
                                 The Shipping is free.</p>
                             </div>
                         </div>
@@ -414,14 +414,14 @@
                             <div class="single-method mb-40">
                                 <i class="ti-unlock"></i>
                                 <h6>Secure Payment System</h6>
-                                <p>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</p>
+                                <p>We use all security system .</p>
                             </div>
                         </div> 
                         <div class="col-xl-4 col-lg-4 col-md-6">
                             <div class="single-method mb-40">
                                 <i class="ti-reload"></i>
-                                <h6>Secure Payment System</h6>
-                                <p>aorem ixpsacdolor sit ameasecur adipisicing elitsf edasd.</p>
+                                <h6>Refund System</h6>
+                                <p>You Can refund your command if something not ok or have a problem .</p>
                             </div>
                         </div>
                     </div>
@@ -444,7 +444,7 @@
                                 </div>
                                 <div class="footer-tittle">
                                     <div class="footer-pera">
-                                        <p>Asorem ipsum adipolor sdit amet, consectetur adipisicing elitcf sed do eiusmod tem.</p>
+                                        <p>Provides your the best smart bluetooth helmet communication for most people is the Low Profile Headset and Intercom. Shop with confidence.</p>
                                 </div>
                                 </div>
                             </div>
