--- a/babaali/index.html
+++ b/babaali/index.html
@@ -455,7 +455,7 @@
                             <div class="footer-tittle">
                                 <h4>Quick Links</h4>
                                 <ul>
-                                    <li><a href="#">Buy Online</a></li>
+                                    <li><a href="shop.html">Buy Online</a></li>
                                     <li><a href="#"> Categories</a></li>
                                     <li><a href="#"> About</a></li>
                                     <li><a href="#">  Contact</a></li>
