--- a/babaali/index.html
+++ b/babaali/index.html
@@ -51,7 +51,7 @@
                             <nav>                                                
                                 <ul id="navigation">  
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="#">Buy Online</a></li>
+                                    <li><a href="shop.html">Buy Online</a></li>
                                      <li><a href="#">Categories</a>
                                         <ul class="submenu">
                                             <li><a href="index.html">Smart Cycle Helmets</a></li>
