--- a/babaali/shop.html
+++ b/babaali/shop.html
@@ -51,7 +51,7 @@
                             <nav>                                                
                                 <ul id="navigation">  
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="#">Buy Online</a></li>
+                                    <li><a href="shop.html">Buy Online</a></li>
                                      <li><a href="#">Categories</a>
                                         <ul class="submenu">
                                             <li><a href="index.html">Smart Cycle Helmets</a></li>
@@ -141,8 +141,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -158,8 +158,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -175,8 +175,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -192,8 +192,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -209,8 +209,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -226,8 +226,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -248,8 +248,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -265,8 +265,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -282,8 +282,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -299,8 +299,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -316,8 +316,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -333,8 +333,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -355,8 +355,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -372,8 +372,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -389,8 +389,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -406,8 +406,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -423,8 +423,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -440,8 +440,8 @@
                                         </div>
                                     </div>
                                     <div class="popular-caption">
-                                        <h3><a href="product_details.html">Thermo Ball Etip Gloves</a></h3>
-                                        <span>$ 45,743</span>
+                                        <h3><a href="product_details.html">Smart Helmets</a></h3>
+                                        <span>$ 45,00</span>
                                     </div>
                                 </div>
                             </div>
@@ -510,7 +510,7 @@
                             <div class="footer-tittle">
                                 <h4>Quick Links</h4>
                                 <ul>
-                                    <li><a href="#">Buy Online</a></li>
+                                    <li><a href="shop.html">Buy Online</a></li>
                                     <li><a href="#"> Categories</a></li>
                                     <li><a href="#"> About</a></li>
                                     <li><a href="#">  Contact</a></li>
